--- a/style.css
+++ b/style.css
@@ -1,31 +1,94 @@
-div {
-    margin: auto;
+/* div {
+  margin: auto;
 }
 
 .container {
-    width: 500px;
-    height: 400px;
+  width: 500px;
+  height: 400px;
 }
 
-
 .kelas1 {
-    background-color: red;
-    width: 250px;
-    height: 250px;
+  background-color: red;
+  width: 250px;
+  height: 250px;
 }
 
 .kelas2 {
-    background-color: yellow;
-    width: 250px;
-    height: 250px;
+  background-color: yellow;
+  width: 250px;
+  height: 250px;
 }
 
 .kelas3 {
-    background-color: blue;
-    width: 250px;
-    height: 250px;
+  background-color: blue;
+  width: 250px;
+  height: 250px;
 }
 
 p {
-    margin: 0;
+  margin: 0;
+}
+nav {
+  max-width: 02px;
+} */
+* {
+  /* border: 1px solid yellow; */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+body {
+  margin: 0;
+  /* background-color: gray; */
+  width: 100vw;
+  height: 100vh;
+}
+.container {
+  margin: auto;
+  height: 100%;
+  width: 90%;
+  /* background-color: brown; */
+  display: flex;
+}
+.modal {
+  position: absolute;
+  width: 750px;
+  height: 450px;
+  background-color: rgba(0, 0, 0, 0.311);
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  text-align: center;
+}
+.close {
+  width: 25px;
+  height: 25px;
+  border: 1px solid red;
+  border-radius: 50%;
+  position: absolute;
+  right: -12px;
+  top: -12px;
+  display: flex;
+  background-color: red;
+}
+.close div {
+  margin: auto;
+}
+
+.btn {
+  margin: auto;
+  display: flex;
+  padding: 16px 24px;
+  border: 1px solid red;
+  border-radius: 24px;
+  box-shadow: 1px 41px 111px -20px rgba(0, 0, 0, 0.42);
+  -webkit-box-shadow: 1px 41px 111px -20px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: 1px 41px 111px -20px rgba(0, 0, 0, 0.42);
+}
+.btn-primmary {
+  background-color: #f1f1f1;
+  transition: 0.2s;
+}
+.btn:hover {
+  transform: scale(1.05);
 }
