--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav {
   max-width: 02px;
 } */
 * {
-  /* border: 1px solid yellow; */
+  border: 1px solid yellow;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
