--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ nav {
   border: 1px solid yellow;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+ul li {
+}
+
 body {
   margin: 0;
   /* background-color: gray; */
