--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 }
 body {
   margin: 0;
@@ -7,6 +7,7 @@ body {
 .container {
   height: 100%;
   width: 100vw;
+  display: flex;
 }
 
 .header {
@@ -37,4 +38,13 @@ body {
 }
 .nav ul li {
   display: block;
+}
+.container-list {
+  width: 100%;
+  margin: auto;
+}
+.balok {
+  width: 1200px;
+  height: 35px;
+  background-color: brown;
 }
